--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,44 @@
-
-
-#search-bar {
-    display: flex;
-    justify-content: center;
-    height: 30px;
-}
-
 body {
     background-color: black;
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
+html, body {
+    overflow-x: hidden;
+  }
+  body {
+    position: relative
+  }
+
+@media screen and (max-width: 600px) {
+    body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
 }
 
 .input-group {
     display: flex;
     justify-content: center;
     padding-top: 100px;
+}
+
+.topPage {
+    width:100%;
+
+}
+
+.topImage {
+    height: 10px!important;
+    width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+    .picheader {
+        height: 100px;
+        width: 100%!important;
+    }
 }
 
 .header {
@@ -27,66 +51,162 @@ body {
 #art-card {
     display: flex;
     justify-content: center;
-}
-
-.pagination {
-    display: inline-block;
-    border-radius: 4px;
-    position:fixed;
-    top: 125px;
-    right: 100px;
-    width: 50px;
    
 }
 
+#searchbutton {
+    background-color:black;
+    border-color:rgb(134, 31, 13);
+}
+
+#search-form {
+    border-color:rgb(134, 31, 13);
+    border-bottom: 1px;
+    border-width: 1px;
+}
+
+.pagination {
+    width: 100%;
+    position:fixed;
+    display: inline-block;
+    bottom: 1px;
+    display: flex;
+    
+}
+
+@media screen and (max-width: 600px) {
+    .form-control {
+   height: 30px;
+  
+}
+.btn {
+    height: 30px;
+
+  
+}
+
+#searchbutton {
+    padding: 1px;
+    font-size: small;
+}
+.form-control:placeholder-shown {
+    font-size:x-small;
+}
+}
+
+
 .pagination a {
-    color: black;
     float: left;
-    padding: 8px 16px;
+    color: rgb(249, 240, 240);
+    width: 100%;
+    margin: auto;
+    padding: 15px;
     text-decoration: none;
-    border: 1px solid black;
-    background-color: white;
-   opacity: 0.3;
   }
 
-#picheader {
-    position:relative;
-    width: 1000px;
+  a:hover {
+    background-color: rgb(194, 23, 23);
+  }
+
+  #increment {
+    text-align: right;
+  }
+
+
+.picheader {
+   
+    width:max-content;
 
 }
 
-#imageContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 50px;
-
-}
 
 .card {
     text-align: center;
     row-gap: 50px;
-    margin: 100px;
+    margin: 50px;
     
 }
 
-#textinfrontofimage {
-    display: flex;
-    position: absolute;
-    font-style: italic;
-    color: rgb(147, 20, 20);
+.card-text {
+    padding: 10px;
 }
+
+
+
+@media screen and (min-width:600px) {
+    .card {
+        text-align: center;
+        row-gap: 50px;
+        margin: 100px;
+}
+}
+
+@media screen and (min-width:800px) {
+    .card {
+        text-align: center;
+        row-gap: 10px;
+        margin: 200px;
+}
+}
+
+.imageContainer {
+    display:flex;
+    justify-content: center;
+    height: min-content;
+    width: min-content;
+}
+
+.decrement {
+
+    display: inline-block;
+
+    top: 125px;
+    width: 41px;
+}
+
+.increment {
+
+    display: inline-block;
+
+    top: 125px;
+    width: 41px;
+}
+
+
 
 #logo {
     float: left;
+    position:fixed;
     padding: 0;
     width: 100px;
 }
 
-img {
-    display: flex;
-    justify-content: center;
-    width: fit-content;
+@media screen and (max-width:600px) {
+    #logo {
+        position:fixed;
+        width: 50px;
+    }
+    .picheader {
+       position: static;
+        width:max-content;
+    
+    }
 
 }
+
+.copyright {
+    bottom: 1px;
+    position: fixed;
+}
+
+@media screen and (max-width: 600px) {
+    .copyright {
+        font-size: x-small;
+    }
+    
+}
+
+
+
+
 
